# ohjelmistotekniikka

./: .coveragerc  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
data/: feeds.csv  feeds.json  test-articles.csv
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
src/: config.py  database_connection.py  index.py  initialize_database.py  util.py
src/entities/: article.py  feed.py
src/repositories/: article_repository.py  feed_repository.py
src/services/: article_service.py  feed_service.py
src/tests/: article_test.py
src/tests/entities/: article_test.py  feed_test.py
src/tests/repositories/: article_repository_test.py  feed_repository_test.py
src/tests/services/: article_service_test.py  feed_service_test.py
src/ui/: articles_view.py  create_view.py  edit_view.py  read_view.py  search_view.py  ui.py
