[tool.poetry]
name = "ohjelmistotekniikka"
version = "0.1.0"
description = ""
authors = ["jipeso <jipesonen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
invoke = "^2.2.0"
feedparser = "^6.0.11"
newspaper3k = "^0.2.8"
lxml-html-clean = "^0.4.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.5"
pytest = "^8.3.5"
coverage = "^7.7.0"
pytest-dotenv = "^0.5.2"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
